                     Owl Platform Common Library for Java
                                  Change Log

Owl Platform: <http://www.owlplatform.com>
Project Website: <https://github.com/OwlPlatform/java-owl-common>

Version 1.0.2 - TBD
 + Added hexadecimal string to byte[] converter in NumericUtils.

Version 1.0.1 - June 13, 2012
 + Initial version ported from GRAIL RTLS at SourceForge.net.
   <http://www.sf.net/projects/grailrtls/>